<resources>
    <string name="app_name">CodeDenim</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Corper Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_student_login">Student Register</string>
    <string name="title_activity_corper_reg">Corper Register</string>
    <string name="title_activity_others_login">Sign in</string>
    <string name="title_activity_user_category">UserCategory</string>
    <string name="title_activity_myAccount">My Account</string>

    <string name="money">₦%s</string>
    <string name="learning_path_name">Name: %s</string>
    <string name="learning_path_price">Price: ₦%s</string>
    <string name="learning_path_pay_button">Pay ₦%s</string>
    <string name="learning_path_desc">Description:\n %s</string>
    <string name="title_activity_login2">Sign in</string>

    <string name="corp">Corper</string>
    <string name="enroll">Enroll</string>
    <string name="resume">Resume</string>

    <string name="user_detail_email"><b>Email</b>: %s</string>
    <string name="user_detail_name"><b>Name</b>: %s</string>
    <string name="video_content">Video Content</string>
    <string name="audio_content">Audio Content</string>
    <string name="pdf_content">PDF Content</string>

    <string name="pay">Pay</string>
    <string name="cancel">Cancel</string>

    <!--card details-->
    <string name="payee_email">Email Address</string>
    <string name="card_name">Card Name</string>
    <string name="amount">Amount</string>
    <string name="card_number">Card Number</string>
    <string name="card_cvc">Card CVC</string>
    <string name="card_expiry_date">Card Expiry Date: </string>
    <string name="card_month">MM</string>
    <string name="card_year">YY</string>

    <!--course detail-->
    <string name="course_category">Course Category: %s</string>
    <string name="course_name">Course Name: %s</string>
    <string name="course_description">Course Description: %s</string>
    <string name="course_code">Course Code: %s</string>
    <string name="course_length">Course Length: %d</string>

    <!--module details-->
    <string name="module_name">ModuleName: %s</string>
    <string name="module_expected_time">Expected Time: %s minutes</string>

    <!--topic details-->
    <string name="topic_name">Topic Name: %s</string>
    <string name="topic_expected_time">Expected Time: %s minutes</string>

    <!--Question details-->
    <string name="comments">%d Comment(s)</string>
    <string name="asked_by">%s %s</string>

    <string name="don_t_have_an_account">Don\'t have an account? <b><font color='#009933'>Sign up</font></b></string>
    <string name="have_an_account">Already have an account? <b><font color='#009933'>Sign in</font></b></string>

    <string name="tap">Tap for %s</string>
    <string name="answer_by">Answered by: <b>%s</b></string>

</resources>
